--- a/manifest.json
+++ b/manifest.json
@@ -7602,10 +7602,43 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/zip/client-standalone-OSS.xml",
+      "output": {
+        "resource": {
+          "relative_path": "home/zip/client-standalone-OSS.xml"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/zip/client-standalone-TSS.xml",
+      "output": {
+        "resource": {
+          "relative_path": "home/zip/client-standalone-TSS.xml"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/zip/consolidated-results.xml",
       "output": {
         "resource": {
           "relative_path": "home/zip/consolidated-results.xml"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/zip/db.properties",
+      "output": {
+        "resource": {
+          "relative_path": "home/zip/db.properties"
         }
       },
       "is_incremental": false,
@@ -7787,14 +7820,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
