--- a/manifest.json
+++ b/manifest.json
@@ -1266,7 +1266,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/git-folder-standardization.html",
-          "hash": "pMQUROUk9jFJRLJ66uXMxQ=="
+          "hash": "LK/e6mFHZhuygyLCSt7hAg=="
         }
       },
       "is_incremental": false,
@@ -3871,6 +3871,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/failed-env.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/failed-env.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/fcm-check-messages.png",
       "output": {
         "resource": {
@@ -5239,6 +5250,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/packages.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/passed-env.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/passed-env.png"
         }
       },
       "is_incremental": false,
@@ -7912,14 +7934,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
