--- a/manifest.json
+++ b/manifest.json
@@ -7794,10 +7794,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/zip/client-standalone-TSS.xml",
+      "source_relative_path": "home/zip/client-standalone-OSS.txt",
       "output": {
         "resource": {
-          "relative_path": "home/zip/client-standalone-TSS.xml"
+          "relative_path": "home/zip/client-standalone-OSS.txt"
         }
       },
       "is_incremental": false,
@@ -7805,10 +7805,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/zip/client-standalone-oss.xml",
+      "source_relative_path": "home/zip/client-standalone-TSS.xml",
       "output": {
         "resource": {
-          "relative_path": "home/zip/client-standalone-oss.xml"
+          "relative_path": "home/zip/client-standalone-TSS.xml"
         }
       },
       "is_incremental": false,
@@ -8039,6 +8039,11 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -8050,11 +8055,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
